# pandaro

./: .dockerignore  .gitignore  DECISIONS.md  Dockerfile.proxy  Dockerfile.web  README.md  SPEC.md  compose.yaml  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/proxy/: package.json
apps/transcribe/: DIARIZATION.md  Dockerfile  preload_models.py  requirements.txt
apps/web/: index.html  package.json  postcss.config.d.ts  tailwind.config.d.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
backend/: .gitignore  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
backend/pandaro/: __init__.py  config.py  logging_setup.py  main.py  orchestrator.py  schemas.py
backend/pandaro/api/: app.py  routes.py  store.py
backend/pandaro/clients/: __init__.py  ollama_client.py
backend/pandaro/gpu/: __init__.py  manager.py
backend/pandaro/pipeline/: __init__.py  export.py  ingest.py  merge.py  nlp.py  rag.py  summarize.py  translate.py
backend/pandaro/providers/: __init__.py  asr.py  base.py  diarization.py  paralinguistics.py
backend/pandaro/text/: __init__.py  chunking.py  confidence.py  fusion.py  keywords.py  phonetic.py  translit.py
backend/tests/: test_api.py  test_integration.py  test_logic.py  test_ollama_client.py  test_pipeline.py  test_text.py
config/: .env.example
docker/: Dockerfile  preload_models.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+66 files in other folders)
