[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandaro"
version = "0.1.0"
description = "Pandaro — ephemeral, Polish-language audio recording analysis (ASR, diarization, paralinguistics, RAG)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "structlog>=24.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy ML stack — only needed to actually run inference on a GPU host.
# Kept separate so the app, its pure logic and tests import without a GPU.
ml = [
    "torch",
    "torchaudio",
    "faster-whisper>=1.0",
    "whisperx",
    "pyannote.audio>=3.1",
    "librosa>=0.10",
    "soundfile",
    "transformers>=4.40",
    "opensmile",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pandaro*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults
